# ediacara

./: CHANGELOG.md  README.md  port-asm.cabal
app/: Main.hs
src/Language/PortAsm/: Interpreter.hs
src/Language/PortAsm/Interpreter/: Monad.hs  Types.hs
src/Language/PortAsm/Syntax/: Extensible.hs  Frontend.hs
